K8s-2052: also featch floating ip quota on quotas endpoint
